Open com.sun.tools.javac.util|main for usage fo google.testing.compile
These were needed as the internal Parsers accesses classes there.