@@ -68,6 +68,8 @@ allprojects {
             jvmArgs += '--add-opens=java.base/java.util.stream=ALL-UNNAMED'
             jvmArgs += '--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED'
             jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+            jvmArgs += '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
 
             // enable this to check for unintended use of boxed primitive iterators
             // note that this flag might cause OOMs on CI
